# ChangeLog for kde-base/kalyptus
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kalyptus/Attic/ChangeLog,v 1.56 2008/02/20 22:34:30 philantrop Exp $

*kalyptus-3.5.9 (20 Feb 2008)

  20 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/kalyptus-3.5.9-fix_makefile.patch, +kalyptus-3.5.9.ebuild:
  Version bump to KDE 3.5.9.

  16 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -kalyptus-3.5.4.ebuild:
  Spring cleaning

  09 Feb 2008; Raúl Porcel <armin76@gentoo.org> kalyptus-3.5.8.ebuild:
  alpha/ia64/sparc stable wrt #208366

  31 Jan 2008; Brent Baude <ranger@gentoo.org> kalyptus-3.5.8.ebuild:
  Marking kalyptus-3.5.8 ppc for bug 207634

  30 Jan 2008; Brent Baude <ranger@gentoo.org> kalyptus-3.5.8.ebuild:
  Marking kalyptus-3.5.8 ppc64 for bug 207634

  30 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  kalyptus-3.5.8.ebuild:
  stable x86, bug 207634

  28 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
  kalyptus-3.5.8.ebuild:
  Marked stable on amd64 as per bug 207634.

*kalyptus-3.5.8 (19 Oct 2007)

  19 Oct 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +kalyptus-3.5.8.ebuild:
  Bump to KDE 3.5.8.

  24 May 2007; Carsten Lohrke <carlo@gentoo.org> kalyptus-3.5.4.ebuild:
  Adjust MAXKDEVER.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> -kalyptus-3.5.2.ebuild:
  Remove old versions.

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> kalyptus-3.5.4.ebuild:
  Bump to 3.5.6 (prerelease).

  11 Dec 2006; <kloeri@gentoo.org> kalyptus-3.5.4.ebuild:
  Stable on ia64.

  06 Dec 2006; <kloeri@gentoo.org> kalyptus-3.5.4.ebuild:
  Stable on Alpha.

  03 Dec 2006; Markus Rothe <corsair@gentoo.org> kalyptus-3.5.4.ebuild:
  Stable on ppc64

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org> kalyptus-3.5.4.ebuild:
  Marked ppc stable for bug #147570.

  14 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> kalyptus-3.5.4.ebuild: