@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kalyptus/Attic/kalyptus-3.5.9.ebuild,v 1.1 2008/02/20 22:34:30 philantrop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kalyptus/Attic/kalyptus-3.5.9.ebuild,v 1.2 2008/05/15 14:41:36 corsair Exp $
 
 KMNAME=kdebindings
 KM_MAKEFILESREV=1
@@ -8,7 +8,7 @@ EAPI="1"
 inherit kde-meta
 
 DESCRIPTION="KDE bindings generator for multiple languages."
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ppc64 ~sparc ~x86"
 IUSE=""
 DEPEND="dev-lang/perl"
 
