@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpilot
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpilot/Attic/ChangeLog,v 1.72 2008/05/12 20:01:16 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpilot/Attic/ChangeLog,v 1.73 2008/05/15 14:39:47 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kpilot-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
   12 May 2008; Brent Baude <ranger@gentoo.org> kpilot-3.5.9.ebuild:
   Marking kpilot-3.5.9 ppc for bug 221063
