@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kalyptus
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kalyptus/Attic/ChangeLog,v 1.56 2008/02/20 22:34:30 philantrop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kalyptus/Attic/ChangeLog,v 1.57 2008/05/15 14:41:36 corsair Exp $
+
+  15 May 2008; Markus Rothe <corsair@gentoo.org> kalyptus-3.5.9.ebuild:
+  Stable on ppc64; bug #221063
 
 *kalyptus-3.5.9 (20 Feb 2008)
 
